--- a/s2r.html
+++ b/s2r.html
@@ -8,6 +8,8 @@
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/AdobeReaderDC.cmd>Adobe Acrobat Reader DC</a>
 &nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/FSViewer.cmd>FastStone Image Viewer</a>
+&nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/TheBat.cmd>The Bat! 9.1.18</a>
 <p><h3>Filers</h3></p>
 <a href=https://libdepo.github.io/s2r/TotalCMD.cmd>Total Commander 10</a>
