--- a/s2r.html
+++ b/s2r.html
@@ -28,6 +28,6 @@
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/DrWEB_125b.cmd>DrWEB 12.5 beta (nightly build)</a>
 &nbsp;|&nbsp;
-<a href=https://libdepo.github.io/s2r/ActKMS.cmd>Activate Windows 10</a>
+<a href=https://libdepo.github.io/s2r/ActKMS.cmd>Activator</a>
 </body>
 </html>
