--- a/s2r.html
+++ b/s2r.html
@@ -26,7 +26,9 @@
 <p><h3>System</h3></p>
 <a href=https://libdepo.github.io/s2r/StartIsBackPP.cmd>StartIsBack++</a>
 &nbsp;|&nbsp;
-<a href=https://libdepo.github.io/s2r/DrWEB_125b.cmd>DrWEB 12.5 beta (nightly build)</a>
+<a href=https://libdepo.github.io/s2r/DrWEB_125b.cmd>DrWEB 12.5 beta</a>
+&nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/K-Lite.cmd>K-Lite Codecs Pack</a>
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/ActKMS.cmd>Activator</a>
 </body>
