--- a/s2r.html
+++ b/s2r.html
@@ -16,7 +16,7 @@
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/WinRAR.cmd>WinRAR 6.02</a>
 &nbsp;|&nbsp;
-<a href=https://libdepo.github.io/s2r/FarManager_7-zip.cmd>Far Manager + 7-Zip archiver 21.03</a>
+<a href=https://libdepo.github.io/s2r/FarManager_7-zip.cmd>Far Manager + 7-Zip 21.03</a>
 <p><h3>Browsers</h3></p>
 <a href=https://libdepo.github.io/s2r/FirefoxESR.cmd>Mozilla Firefox ESR</a>
 &nbsp;|&nbsp;
