--- a/s2r.html
+++ b/s2r.html
@@ -30,6 +30,8 @@
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/K-Lite.cmd>K-Lite Codecs Pack</a>
 &nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/VCRedist.cmd>VC++ Redist.</a>
+&nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/ActKMS.cmd>Activator</a>
 </body>
 </html>
