--- a/s2r.html
+++ b/s2r.html
@@ -14,7 +14,7 @@
 <p><h3>Filers</h3></p>
 <a href=https://libdepo.github.io/s2r/TotalCMD.cmd>Total Commander 10</a>
 &nbsp;|&nbsp;
-<a href=https://libdepo.github.io/s2r/WinRAR.cmd>WinRAR 6.02</a>
+<a href=https://libdepo.github.io/s2r/WinRAR.cmd>WinRAR</a>
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/FarManager_7-zip.cmd>Far Manager + 7-Zip 21.03</a>
 <p><h3>Browsers</h3></p>
