--- a/s2r.html
+++ b/s2r.html
@@ -32,6 +32,8 @@
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/VCRedist.cmd>VC++ Redist.</a>
 &nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/Java.cmd>Java</a>
+&nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/ActKMS.cmd>Activator</a>
 </body>
 </html>
