--- a/s2r.html
+++ b/s2r.html
@@ -30,7 +30,7 @@
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/K-Lite.cmd>K-Lite Codecs Pack</a>
 &nbsp;|&nbsp;
-<a href=https://libdepo.github.io/s2r/VCRedist.cmd>VC++ Redist.</a>
+<a href=https://libdepo.github.io/s2r/VCRedist.cmd>VC++</a>
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/Java.cmd>Java</a>
 &nbsp;|&nbsp;
