--- a/dbf.html
+++ b/dbf.html
@@ -2,61 +2,81 @@
 <head>
 <meta charset="utf-8">
 <title>Список дополнений «seeds»</title>
+<link href="http://fonts.googleapis.com/css?family=Ubuntu&subset=cyrillic" rel="stylesheet" type="text/css">
 </head>
-<body>
-<ul><p><h2><u>Список дополнений «seeds»</u></h2></p></ul>
+<body style="font-family:Ubuntu">
+<ul><h2><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS title="Перейти на страницу загрузки «Dualboot flash»">Список дополнений «seeds»</a></h2></ul>
 <ul><details>
 <summary>Инструкция</summary>
 <p><ol>
-<li>Скачать <a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/&files=aria7z.cab>aria7z.cab</a> и положить в папку <b>/boot/fonts/</b> на разделе FAT32;</li>
+<li><s>Скачать <a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?files=aria7z.cab>aria7z.cab</a> и положить в папку <b>/boot/fonts/</b> на разделе FAT32;</s></li>
 <li>Создать на разделе флешки папку (см. прим.);</li>
 <li>Скачать нужный «seed», положить в созданную папку и запустить:
 <ul>
 <li>если папка пуста, то будет скачано соответствующее приложение и его запуск прописан в файлах конфигурации;</li>
 <li>если папка уже содержит нужное приложение, то скачивание пропускается.</li>
 </ul></ol><br/>
-Примечания:
-<ul><ul>
+<ul style='list-style: "* "'><li>Примечания:</li>
+<ul>
 <li>некоторые приложения работают только на разделе FAT32;</li>
 <li>названия папок не должны содержать пробелов, кириллицы и спец.символов.</li>
 </ul></ul>
 </p></details></ul>
-<p><h3>Сборки мультизагрузки</h3></p>
+<h3>Сборки мультизагрузки</h3>
 <ul>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=demo.2k10Live740.seed.cmd>2k10 Live 7.40 (устаревшая)</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=demo.2k10Next.seed.cmd>2k10 Next (актуальная)</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=demo.SSTR.seed.cmd>WinPE 11-10-8 Sergei Strelec</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=demo.SSTR.seed.cmd>WinPE 11-10-8 by Sergei Strelec</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=demo.peSE.seed.cmd>Win11PESE x64 by Ratiborus</a></li>
 </ul>
-<p><h3>Инструменты</h3></p>
+<h3>Инструменты</h3>
 <ul>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.AcronisABR.seed.cmd>Acronis Backup (Advanced) 11.7</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.AcronisCPHO.seed.cmd>Acronis Cyber Protect Home Office</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.AcronisDD.seed.cmd>Acronis Disk Director 12.5 Server</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.ATINAK.seed.cmd>Acronis TrueImage «New Age» Kit+</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.DrWEB.seed.cmd>Dr.WEB LiveDisk</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.AcronisABR.seed.FAT.cmd>Acronis Backup (Advanced) 11.7</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.AcronisCPHO.seed.FAT.cmd>Acronis Cyber Protect Home Office</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.AcronisDD.seed.FAT.cmd>Acronis Disk Director 12.5 Server</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.ATINAK.seed.FAT.cmd>Acronis TrueImage «New Age» Kit+</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.DrWEB.seed.FAT.cmd>Dr.WEB LiveDisk</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.HDClone.seed.FAT.cmd>HDClone 9.0.3 Professional</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.HDDaRTs.seed.cmd>HD Diagnostic and Repair Tools</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.MemTest.seed.cmd>Memory Test Floppy Disk</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.PHDM15.seed.cmd>Paragon Hard Disk Manager 15 Premium</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.PHDM15.seed.FAT.cmd>Paragon Hard Disk Manager 15 Premium</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.R-Studio.seed.cmd>R-Studio Emergency</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.TeraByte.seed.cmd>TeraByte BootIt BM++ & IFL++</a></li>
 </ul>
-<p><h3>Загрузочные WinPE</h3></p>
+<h3>Загрузочные WinPE</h3>
 <ul>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.ActiveBD.seed.cmd>Active@ Boot Disk</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.Bootmedia.seed.cmd>Bootmedia (3map + WInst + Far)</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.OOBlueCon.seed.cmd>O&O BlueCon Tech Edition</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.WinPE11x64.seed.cmd>Xemom1 WinPE11 x64</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.WinPE8x86.seed.cmd>Xemom1 WinPE8 x86</a></li>
 </ul>
-<p><h3>Сборки Linux</h3></p>
+<h3>Сборки Linux</h3>
 <ul>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.KaliLinux.seed.cmd>Kali Linux</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.KaliLinux.seed.NTFS.cmd>Kali Linux</a><sup><small> NTFS</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.LinuxMint.seed.cmd>LinuxMint</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.MX-Linux.seed.cmd>MX-Linux</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.PartedMagic.seed.cmd>Parted Magic</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.SystemRescue.seed.cmd>SystemRescue</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.Tails.seed.cmd>Tails</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.Ubuntu.seed.cmd>Ubuntu LTS</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.Tails.seed.FAT.cmd>Tails</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.Ubuntu.seed.NTFS.cmd>Ubuntu LTS</a><sup><small> NTFS</small></sup></li>
+</ul>
+<h3>Доп. утилиты</h3>
+<ul>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=check.DBF.fragment.cmd>Дефрагментация «Dualboot flash»</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=set.WEE.boot.cmd
+title="Поддержка устаревшего «железа»
+- позволяет установить загрузчик WEE для режима BIOS/Legacy
+- добавляет загрузчики Grub4DOS 0.4.5, Windows 7 и PLOP"
+>Смена загрузчика режима BIOS (WEE + legacy загрузчики)</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=set.SSM.boot.cmd
+title="1. Устанавливает для режима UEFI загрузчик от Microsoft (раздел FAT32).
+2. Создаёт резервную копию дефолтного BCD, сканирует раздел FAT32 в поиске сторонних BCD для режима UEFI, выделяет записи, для которых есть WIM, и добавляет их в дефолтный BCD.
+3. При возврате в обычный режим (загрузчик GRUB2 для режима UEFI) восстанавливает дефолтный BCD из резервной копии."
+>Режим «Strong Secure Mode»</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=xtra.G2FMngr.seed.cmd>GRUB2-FileManager by A1ive</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=run.QEMU.emulator.cmd>Тестирование в эмуляторе QEMU x64</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=update.DBF.helper.cmd>Обновление файлов «Dualboot flash»</a></li>
 </ul>
 </body>
 </html>
