--- a/dbf.html
+++ b/dbf.html
@@ -39,20 +39,23 @@
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.HDClone.seed.FAT.cmd>HDClone 9.0.3 Professional</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.HDDaRTs.seed.cmd>HD Diagnostic and Repair Tools</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.MemTest.seed.cmd>Memory Test Floppy Disk</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.PHDM15.seed.FAT.cmd>Paragon Hard Disk Manager 15 Premium</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.ParagonRE.seed.FAT.cmd>Paragon Recovery Environment</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.R-Studio.seed.cmd>R-Studio Emergency</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.TeraByte.seed.cmd>TeraByte BootIt BM++ & IFL++</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.UUPS.seed.FAT.cmd>UEFI useless program suite</a><sup><small> FAT32</small></sup></li>
 </ul>
 <h3>Загрузочные WinPE</h3>
 <ul>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.ActiveBD.seed.cmd>Active@ Boot Disk</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.Bootmedia.seed.cmd>Bootmedia (3map + WInst + Far)</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.LRSU.seed.cmd>Lazesoft Recovery Suite «Unlimited»</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.OOBlueCon.seed.cmd>O&O BlueCon Tech Edition</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.WinPE11x64.seed.cmd>Xemom1 WinPE11 x64</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=winpe.WinPE8x86.seed.cmd>Xemom1 WinPE8 x86</a></li>
 </ul>
 <h3>Сборки Linux</h3>
 <ul>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.Debian.seed.cmd>Debian XFCE</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.KaliLinux.seed.NTFS.cmd>Kali Linux</a><sup><small> NTFS</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.LinuxMint.seed.cmd>LinuxMint</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=linux.MX-Linux.seed.cmd>MX-Linux</a></li>
@@ -64,11 +67,14 @@
 <h3>Доп. утилиты</h3>
 <ul>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=check.DBF.fragment.cmd>Дефрагментация «Dualboot flash»</a></li>
-<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=set.WEE.boot.cmd
-title="Поддержка устаревшего «железа»
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=set.BOOT.menu.cmd
+title="Варианты меню загрузки:
+- BIOS: Grub4DOS или BootMGR или Wee
+- UEFI: GRUB2 или BootMGR
+Поддержка устаревшего «железа»:
 - позволяет установить загрузчик WEE для режима BIOS/Legacy
 - добавляет загрузчики Grub4DOS 0.4.5, Windows 7 и PLOP"
->Смена загрузчика режима BIOS (WEE + legacy загрузчики)</a></li>
+>Установка меню начальной загрузки</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=set.SSM.boot.cmd
 title="1. Устанавливает для режима UEFI загрузчик от Microsoft (раздел FAT32).
 2. Создаёт резервную копию дефолтного BCD, сканирует раздел FAT32 в поиске сторонних BCD для режима UEFI, выделяет записи, для которых есть WIM, и добавляет их в дефолтный BCD.
@@ -77,6 +83,28 @@ title="1. Устанавливает для режима UEFI загрузчик
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=xtra.G2FMngr.seed.cmd>GRUB2-FileManager by A1ive</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=run.QEMU.emulator.cmd>Тестирование в эмуляторе QEMU x64</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=update.DBF.helper.cmd>Обновление файлов «Dualboot flash»</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Xtras&files=add.WIMG.helper.cmd>Добавление сторонних WIM/VHD</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=xtra.AVScan.seed.cmd>Добавление антивирусных сканеров</a></li>
+</ul>
+<hr>
+<h3>Сторонние дополнения</h3>
+<ul>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.Avira.seed.cmd>Avira Rescue System</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.TMRD.seed.cmd>Trend Micro Rescue Disk</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.Fedora.seed.FAT.cmd>Fedora Linux</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.Manjaro.seed.cmd>Manjaro Linux</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.SimplyLinux.seed.cmd>SimplyLinux</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.winpe.Avast.seed.cmd>Avast Rescue Disk</a></li>
+</ul>
+<h3>Устаревшие дополнения</h3>
+<ul>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.PHDM15.seed.cmd>Paragon Hard Disk Manager 15 Premium</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.UBCD.seed.cmd>Ultimate Boot CD</a></li>
+</ul>
+<hr>
+<h3>Экспериментальные дополнения</h3>
+<ul>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.HDCloneUE.seed.FAT.cmd>HDClone 12.0.8 Unlocked Edition</a><sup><small> FAT32</small></sup></li>
 </ul>
 </body>
 </html>
