--- a/dbf.html
+++ b/dbf.html
@@ -90,15 +90,19 @@ title="1. Устанавливает для режима UEFI загрузчик
 <h3>Сторонние дополнения</h3>
 <ul>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.Avira.seed.cmd>Avira Rescue System</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.Rescuezilla.seed.cmd>Rescuezilla</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.TMRD.seed.cmd>Trend Micro Rescue Disk</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.Fedora.seed.FAT.cmd>Fedora Linux</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.Manjaro.seed.cmd>Manjaro Linux</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.REDOS.seed.NTFS.cmd>РЕД ОС</a><sup><small> NTFS</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.SimplyLinux.seed.cmd>SimplyLinux</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.winpe.Avast.seed.cmd>Avast Rescue Disk</a></li>
 </ul>
 <h3>Устаревшие дополнения</h3>
 <ul>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.HirenDU.seed.cmd>Hiren's DOS utils</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.PHDM15.seed.cmd>Paragon Hard Disk Manager 15 Premium</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.SonyaPE.seed.FAT.cmd>SonyaPE (WinXP)</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.UBCD.seed.cmd>Ultimate Boot CD</a></li>
 </ul>
 <hr>
