--- a/ltsc.html
+++ b/ltsc.html
@@ -1,15 +1,20 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://disk.yandex.ru/d/xNv1GT_WelqPDw">
-        <script type="text/javascript">
-            window.location.href = "https://disk.yandex.ru/d/xNv1GT_WelqPDw"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://disk.yandex.ru/d/xNv1GT_WelqPDw'>link to example</a>.
-    </body>
+<!doctype html>
+<head>
+<meta charset="utf-8">
+<title>Проект LoTuS (LTSC) 24H2</title>
+</head>
+<body>
+<p><h3>System</h3></p>
+<a href=https://libdepo.github.io/s2r/_k-lite.cmd>K-Lite Codec Pack Full</a>
+&nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/_vcpp.cmd>VC++</a>
+&nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/_java.cmd>Java</a>
+<p><h3>Software</h3></p>
+<a href=https://libdepo.github.io/s2r/_far3.cmd>Far Manager 3</a>
+&nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/_winrar.cmd>WinRAR</a>
+&nbsp;|&nbsp;
+<a href=https://libdepo.github.io/s2r/_fsview.cmd>FastStone Image Viewer</a>
+</body>
 </html>
