--- a/ltsc.html
+++ b/ltsc.html
@@ -11,7 +11,7 @@
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/_java.cmd>Java</a>
 <p><h3>Software</h3></p>
-<a href=https://libdepo.github.io/s2r/ffar3.cab>Far Manager 3</a>
+<a href=https://libdepo.github.io/s2r/ffar3.zip>Far Manager 3</a>
 &nbsp;|&nbsp;
 <a href=https://libdepo.github.io/s2r/_winrar.cmd>WinRAR</a>
 &nbsp;|&nbsp;
