--- a/depo.html
+++ b/depo.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta http-equiv="refresh" content="0; url=https://libdepo.github.io/files/make_depo.vbs" />
         <script type="text/javascript">
             window.location.href = "https://libdepo.github.io/files/make_depo.vbs"
         </script>
-        <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
