--- a/dbf.html
+++ b/dbf.html
@@ -40,6 +40,7 @@
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.DrWEB.seed.FAT.cmd>Dr.WEB LiveDisk</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.HDClone.seed.FAT.cmd>HDClone 9.0.3 Professional</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.HDDaRTs.seed.cmd>HD Diagnostic and Repair Tools</a></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.KRD2024.seed.cmd>Kaspersky Rescue Disk 2024</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.MemTest.seed.cmd>Memory Test Floppy Disk</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.ParagonRE.seed.FAT.cmd>Paragon Recovery Environment</a><sup><small> FAT32</small></sup></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=tools.R-Studio.seed.cmd>R-Studio Emergency</a></li>
@@ -101,6 +102,7 @@ title="1. Устанавливает для режима UEFI загрузчик
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.Rescuezilla.seed.cmd>Rescuezilla</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.tools.TMRD.seed.cmd>Trend Micro Rescue Disk</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.Fedora.seed.FAT.cmd>Fedora Linux</a><sup><small> FAT32</small></sup></li>
+<li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.LMDEonVD.seed.cmd>LMDE 6 Faye от stea.61</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.Manjaro.seed.cmd>Manjaro Linux</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.MiniOS.seed.cmd>MiniOS Linux</a></li>
 <li><a href=https://getspace.cloud/cloud/s/5D8b2iq5R9BSssS/download?path=/Seeds&files=zzz.linux.SimplyLinux.seed.cmd>SimplyLinux</a></li>
